5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1577_2896.log
== TEST (2019-03-28 18:11:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("computador": ) 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = input("computador": ) 
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:11:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("computador":) 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = input("computador":) 
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:12:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
input("computador":) 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    input("computador":) 
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:12:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var=input("computador":) 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var=input("computador":) 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:12:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var=input("computador":) 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var=input("computador":) 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:12:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("computador":) 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var= input("computador":) 
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:12:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("computador: ") 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var= input("computador":) 
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:14:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("computador: ") 

print("var")
print()
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:14:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("computador: ") 

print("var")
print(abcde)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(abcde)
NameError: name 'abcde' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:14:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("computador: ") 

print("var")
print("abcde")
-- OUTPUT:
var
abcde
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:14:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("computador: ") 

print("var")
print("abcde")
-- EXECUTION TIME:
0.113559
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
abcde
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
abcde
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:15:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("texto: ")
print= abc

print("var")
print("abcde")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print= abc
NameError: name 'abc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:15:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("texto: ")
print= "abc"

print("var")
print("abcde")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("var")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:16:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("texto: ")
print= "abc"

print("var")
print("abcde")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("var")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:16:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("texto: ")

print("var")
print("abcde")
-- OUTPUT:
var
abcde
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:17:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("texto: ")

print("var")
print("abcde")
-- EXECUTION TIME:
0.138403
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
abcde
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
abcde
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:18:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("texto: ")

print("var")

-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:26:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digete o nome: ")

print("var")

-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:26:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digete o nome: ")

print("var")

-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:28:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digete o nome: ")
input("abc")
print("var")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:28:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digete o nome: ")
input("abc")
print("var")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:29:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("7")

print("var")

-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:30:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")

print("var")

-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:34:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")
var
print("var")

-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:34:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")
var= "Digite um texto"
print("var")

-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:38:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")

print(var)

-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:39:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")

print(var)

-- EXECUTION TIME:
0.188363
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:39:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")

print(var)

-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:40:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")

print(var)

-- EXECUTION TIME:
0.177214
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:07:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")

print(var)

-- EXECUTION TIME:
0.123439
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:08:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input("Digite um texto: ")

print(var)

-- EXECUTION TIME:
0.126386
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:49:52) 
-- CODE:
var= input("Digite um texto: ")

print(var)

-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:50:34) 
-- CODE:
var= input("Digite um texto: ")
print(var)

-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
